# router/app.go
@@ -12,7 +12,10 @@ func Router() *gin.Engine {
 	r := gin.Default()
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserList)
+	r.GET("/user/CreateUser", service.CreateUser)
+	r.GET("/user/DeleteUser", service.DeleteUser)
 	return r
 }
